--- a/iamrich/Base.lproj/Main.storyboard
+++ b/iamrich/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <color key="textColor" name="windowFrameTextColor" catalog="System" colorSpace="catalog"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XKH-KJ-NeE">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diamond" translatesAutoresizingMaskIntoConstraints="NO" id="XKH-KJ-NeE">
                                 <rect key="frame" x="72" y="313" width="270" height="270"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -36,4 +36,7 @@
             <point key="canvasLocation" x="139.69465648854961" y="125.35211267605635"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="diamond" width="1030" height="754"/>
+    </resources>
 </document>
