feat: add icon image for this app
icon created by canva with 1024x1024 size

--- a/iamrich/Base.lproj/Main.storyboard
+++ b/iamrich/Base.lproj/Main.storyboard
@@ -37,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="diamond" width="1030" height="754"/>
+        <image name="diamond" width="343.33334350585938" height="251.33332824707031"/>
     </resources>
 </document>
